q13/deploy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: q13-service
spec:
  type: NodePort
  selector:
    app: q13
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: q13        
  labels:
    app: q13
spec:
  replicas: 1
  selector:
    matchLabels:
      app: q13
  template:
    metadata:
      labels:
        app: q13
    spec:
      containers:
        - image: httpd:bookworm
          name: httpd
          ports:
            - containerPort: 80
